@@ -136,7 +136,7 @@ enum ECTagNames {
 		EC_TAG_CLIENT_VERSION                     = 0x0101,
 		EC_TAG_CLIENT_MOD                         = 0x0102,
 	EC_TAG_STATS_UL_SPEED                     = 0x0200,
-		EC_TAG_STATS_DL_SPEED	                  = 0x0201,
+		EC_TAG_STATS_DL_SPEED                     = 0x0201,
 		EC_TAG_STATS_UL_SPEED_LIMIT               = 0x0202,
 		EC_TAG_STATS_DL_SPEED_LIMIT               = 0x0203,
 		EC_TAG_STATS_UP_OVERHEAD                  = 0x0204,
@@ -144,6 +144,10 @@ enum ECTagNames {
 		EC_TAG_STATS_TOTAL_SRC_COUNT              = 0x0206,
 		EC_TAG_STATS_BANNED_COUNT                 = 0x0207,
 		EC_TAG_STATS_UL_QUEUE_LEN                 = 0x0208,
+		EC_TAG_STATS_ED2K_USERS                   = 0x0209,
+		EC_TAG_STATS_KAD_USERS                    = 0x020A,
+		EC_TAG_STATS_ED2K_FILES                   = 0x020B,
+		EC_TAG_STATS_KAD_FILES                    = 0x020C,
 	EC_TAG_PARTFILE                           = 0x0300,
 		EC_TAG_PARTFILE_NAME                      = 0x0301,
 		EC_TAG_PARTFILE_PARTMETID                 = 0x0302,
