@@ -124,7 +124,7 @@ public final static short EC_TAG_CLIENT_NAME                        = 0x0100;
 public final static short 	EC_TAG_CLIENT_VERSION                     = 0x0101;
 public final static short 	EC_TAG_CLIENT_MOD                         = 0x0102;
 public final static short EC_TAG_STATS_UL_SPEED                     = 0x0200;
-public final static short 	EC_TAG_STATS_DL_SPEED	                  = 0x0201;
+public final static short 	EC_TAG_STATS_DL_SPEED                     = 0x0201;
 public final static short 	EC_TAG_STATS_UL_SPEED_LIMIT               = 0x0202;
 public final static short 	EC_TAG_STATS_DL_SPEED_LIMIT               = 0x0203;
 public final static short 	EC_TAG_STATS_UP_OVERHEAD                  = 0x0204;
@@ -132,6 +132,10 @@ public final static short 	EC_TAG_STATS_DOWN_OVERHEAD                = 0x0205;
 public final static short 	EC_TAG_STATS_TOTAL_SRC_COUNT              = 0x0206;
 public final static short 	EC_TAG_STATS_BANNED_COUNT                 = 0x0207;
 public final static short 	EC_TAG_STATS_UL_QUEUE_LEN                 = 0x0208;
+public final static short 	EC_TAG_STATS_ED2K_USERS                   = 0x0209;
+public final static short 	EC_TAG_STATS_KAD_USERS                    = 0x020A;
+public final static short 	EC_TAG_STATS_ED2K_FILES                   = 0x020B;
+public final static short 	EC_TAG_STATS_KAD_FILES                    = 0x020C;
 public final static short EC_TAG_PARTFILE                           = 0x0300;
 public final static short 	EC_TAG_PARTFILE_NAME                      = 0x0301;
 public final static short 	EC_TAG_PARTFILE_PARTMETID                 = 0x0302;
